fixed text alignment and pictures

--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,7 @@ body {
     font-family: 'Open Sans', sans-serif; font-size: 16px; font-weight: 300; color: #555; margin: 0; padding: 0;
 }
 
-img {
-    max-width: 1000px !important;
-}
+
 
 /* Text */
 
